--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.13.4",
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.3.7",
-    "node-geocoder": "^3.6.2"
+    "node-geocoder": "^3.6.2",
+    "staff": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
