--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "analytics-node": "^2.1.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.1",
+    "ejs": "^2.4.2",
+    "email-templates": "^2.0.0",
     "express": "^4.13.4",
     "flat": "^2.0.0",
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.4.20",
     "node-geocoder": "^3.6.2",
+    "sendgrid": "^3.0.5",
     "staff": "^1.0.2",
     "stripe": "^4.7.0"
   },
