Working on  deployment

--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "analytics-node": "^2.1.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.1",
+    "connect-busboy": "0.0.2",
     "ejs": "^2.4.2",
     "email-templates": "^2.0.0",
     "express": "^4.13.4",
     "flat": "^2.0.0",
+    "fs-extra": "^0.30.0",
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.4.20",
     "node-geocoder": "^3.6.2",
+    "s3-uploader": "^2.0.1",
     "sendgrid": "^3.0.5",
     "staff": "^1.0.2",
     "stripe": "^4.7.0"
